--- a/CICDハンズオン用資料/buildspec.yml
+++ b/CICDハンズオン用資料/buildspec.yml
@@ -1,6 +1,11 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      - unzip awscliv2.zip
+      - sudo ./aws/install
   build:
     commands:
       - aws deploy push --application-name finalwork-bucket000 --s3-location s3://finalwork-bucket000/artifact.zip --source src
