--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,8 @@ phases:
     commands:
       - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       - unzip awscliv2.zip
-      - sudo ./aws/install
+      - ./aws/install -i $HOME/aws-cli -b $HOME/bin
+      - export PATH=$HOME/bin:$PATH
   build:
     commands:
       - aws deploy push --application-name finalwork-bucket000 --s3-location s3://finalwork-bucket000/artifact.zip --source src
