--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,15 +1,9 @@
 version: 0.2
 
 phases:
-  install:
-    commands:
-      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      - unzip awscliv2.zip
-      - ./aws/install -i $HOME/aws-cli -b $HOME/bin
-      - export PATH=$HOME/bin:$PATH
   build:
     commands:
-      - aws deploy push --application-name finalwork-app --s3-location s3://finalwork-bucket000/artifact.zip --source src --debug 
+      - aws deploy push --application-name finalwork-app --s3-location s3://finalwork-bucket000/artifact.zip --source src
 artifacts:
   files:
     - '**/*'
